# pyandroidfacedetector

./: .clang-format  AndroidFaceDetector.py  CMakeLists.txt  build.py  cutface.py  invoke.sh  pyentry.cc  test.py
